# demo-colombia

./: README.md  docker-compose.yml
backend/: Dockerfile  docker-compose.yml  gestor_alertas.py  main.py  requirements.txt
mosquitto/: README.md
perception/: CMakeLists.txt  README.md
perception/cfg/: config.yml  nvdsanalytics.txt  preprocess.txt  sources.yml  tracker_NvDCF_resnet50.yml  yolov8_pgie.yml
perception/cmake/: FindMosquitto.cmake  FindNVDS.cmake
perception/custom-parser/deepstream-yolo/nvdsinfer_custom_impl_Yolo/: Makefile
perception/custom-parser/deepstream-yolo/utils/: export_yoloV8.py
perception/docker/: Dockerfile  README.md  init.Dockerfile
perception/include/: ObjInfo.hpp  Pipeline.hpp  args_parameters.hpp  perception.hpp
perception/scripts/: 80-g2f-check.sh  get_models.bash  setup.bash  yolov8_pt2trt.bash
perception/src/: Pipeline.cpp  perception.cpp
redis/conf/: redis.conf
